test/scc_test/expr/semantic-errors/028.t
void test()
{
    sizeof(struct A);
}